fix spacing on menu links

--- a/source/_docs/patterns/03-organisms/navigation/main-navigation/_ulti-menu.scss
+++ b/source/_docs/patterns/03-organisms/navigation/main-navigation/_ulti-menu.scss
@@ -30,8 +30,7 @@ Overwrite to reset default ultimenu styles.
   opacity: 0;
 }
 .is-ultidesktop .is-ultihover:not(.is-ulticaret) li.has-ultimenu a.open + .ultimenu__flyout,
-.ultimenu .ultimenu__item.has-ultimenu:has(a.open) .ultimenu__flyout
- {
+.ultimenu .ultimenu__item.has-ultimenu:has(a.open) .ultimenu__flyout {
   visibility: visible;
   overflow: visible;
   height: auto;
@@ -55,4 +54,10 @@ Overwrite to reset default ultimenu styles.
 }
 .is-ultimenu .is-ultihover .ultimenu__flyout {
   position: relative;
+}
+.is-ultimenu .is-ultihover:not(.is-ulticaret) .has-ultimenu .ultimenu__link {
+  padding-right: 1.5em;
+}
+.is-ultimenu .is-ultihover:not(.is-ulticaret) .ultimenu__link {
+  padding-right: var(--space--xs);
 }
